--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -230,11 +230,11 @@ The Kubernetes Metrics Server parameter controls the installation of {uri-metric
 The KMS integration parameters control whether {uri-oci-kms}[OCI Key Management Service] will be used for encrypting Kubernetes secrets. Additionally, the bastion and operator hosts must be enabled as well as instance_principal on the operator.
 
 ----
-bastion_enabled = true
-operator_enabled = true
+create_bastion_host = true
+create_operator = true
 operator_instance_principal = true
 use_encryption = true
-existing_key_id = <existing_key_id>
+kms_key_id = <kms_key_id>
 ----
 
 OKE also supports enforcing the use of signed images. You can enforce the use of signed image using the following parameters:
