--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -148,6 +148,11 @@ module "oke" {
   ssh_private_key_path                  =   var.ssh_private_key_path
   ssh_public_key_path                   =   var.ssh_public_key_path
 
+OR 
+
+  ssh_private_key                       =   var.ssh_private_key
+  ssh_public_key                        =   var.ssh_public_key
+
   label_prefix                          =   var.label_prefix
   region                                =   var.region
 
