--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -8,10 +8,40 @@ All notable changes to this project are documented in this file.
 The format is based on {uri-changelog}[Keep a Changelog].
 
 === Unreleased
+# Breaking changes
+* Removed base module and use vcn, bastion and operator modules directly
+* Renamed and standardized all control variables
+* Removed deprecated template provider dependencies
+* Made bastion and operator modules conditional
+* Added LPGs for hub and spoke deployment model
+* Set minimum version to Terraform 1.0.0
+* Removed identity parameters in between modules
+* Renamed okenetwork submodule to network
+* Created a new submodule (extensions) and moved all scripts and extra things there
+* Moved dynamic group and policy for kms into oke module
+* Added a 30s delay between policy creation for kms and cluster creation to allow for global propagation
+* Added a home provider in oke module for dynamic group and policy creation
+
+# Changes
 * Changed default Kubernetes version to v1.20.8 and removed v1.16.8, v1.17.9 from docs.
 * Added support for reserved public IP address for NAT gateway
 * Bug fix: Use correct calico file to install calico for networking policy only (#307)
 * Added support for GPU and ARM shapes (#302)
+* VCN module upgraded to VCN 3.0.0. This allows supporting multiple cidr blocks (#360 )
+* kubeconfig on operator always uses PRIVATE_ENDPOINT (#358 )
+* Documented providers in quickstart (#355 )
+* Renamed tags to freeform_tags in line with other modules
+* Added validation on some variables
+
+# New Features
+
+* Allow access to operator via OCI Bastion service (#352)
+* Added support for using NSGs for cluster endpoint (#343 )
+* Added option to disable worker node access to Internet. Users can only pull images from OCIR (#331 )
+
+# Bug fixes
+* Added home region to update dynamic group script for cases when actual region is different from tenancy home region (#347)
+* Added 1 missing rule for operator to access control plane (#349 )
 
 = 3.2.0 (May 12, 2021)
 
